infra/k8s-dev/ingress-srv.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/comments/?(.*)
            backend:
              serviceName: comments-srv
              servicePort: 3000
          - path: /api/posts/?(.*)
            backend:
              serviceName: posts-srv
              servicePort: 3000
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
